# BrautKI

./: .gitignore  DEPLOYMENT_CHECKLIST.md  PRODUCTION_READY.md  README.md  RUNBOOK.md
.github/workflows/: ci.yml
agents/: .env.example  README.md  pyproject.toml
agents/src/agents/: __init__.py  api.py  config.py  council_client.py  gateway_client.py  observability.py  schemas.py
agents/src/agents/graphs/: __init__.py  crm_agent.py  delivery_agent.py  inbox_agent.py  marketing_agent.py
agents/src/agents/scripts/: __init__.py  test_core_agents.py  test_inbox_agent.py
agents/src/agents/tools/: inbox_tools.py
data/: .env.example  README.md  alembic.ini  pyproject.toml
data/alembic/: env.py
data/alembic/versions/: 0001_baseline.py  0002_email_provider_id.py
data/migrations/: 0001_init.sql
data/src/data_layer/: __init__.py  config.py  db.py  etl_emails.py  gateway_client.py  models.py
data/src/data_layer/connectors/: __init__.py  graph_connector.py  imap_connector.py  mock_connector.py
gateway/: .env.example  README.md  models.yml  package-lock.json  package.json  tsconfig.json
gateway/data/: offerings.json
gateway/scripts/: smoke-test.ts
gateway/src/: server.ts
gateway/src/admin/: index.html
gateway/src/config/: loadModels.ts
gateway/src/logging/: metrics.ts  requestLogger.ts
gateway/src/providers/: anthropicProvider.ts  base.ts  httpClient.ts  localHttpProvider.ts  openRouterProvider.ts  openaiProvider.ts
gateway/src/router/: resolveProvider.ts
gateway/src/types/: openai.ts
governance/: README.md
governance/llm-council/: .env.example  README.md  pyproject.toml
governance/llm-council/examples/: call_council_via_gateway.py
governance/llm-council/src/llm_council/: __init__.py  api.py  config.py  observability.py  schemas.py  service.py
governance/paperclip/: README.md  docker-compose.yml  paperclip-org.yaml  pyproject.toml
governance/paperclip/src/paperclip_workflows/: __init__.py  daily_standup.py
local-models/: .env.example  Dockerfile.wrapper  README.md  docker-compose.yml  pyproject.toml
local-models/src/local_models/: __init__.py  wrapper_api.py
observability/: README.md  alerts-template.md  dashboard-template.json
orchestrator/: .env.example  README.md  docker-compose.yml
orchestrator/workflows/: email-triage-workflow.json
scripts/: env_preflight.py  release_smoke.py
