[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ready-agents"
version = "0.1.0"
description = "LangGraph/Hermes agents for AI Ready."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "langgraph>=0.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1"
]

[project.scripts]
agents-api = "agents.api:main"
inbox-agent-test = "agents.scripts.test_inbox_agent:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
